<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/edit_incident_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="Incidente"
        app:navigationIcon="@drawable/ic_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/incident_description_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Incident short description"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/edit_incident_toolbar"
        app:layout_constraintStart_toStartOf="@id/edit_incident_toolbar"
        app:layout_constraintEnd_toEndOf="@id/edit_incident_toolbar">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/incident_description_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/show_camera_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/incident_description_label"
        app:layout_constraintStart_toStartOf="@id/incident_description_label"
        app:layout_constraintEnd_toEndOf="@id/incident_description_label"
        android:text="@string/take_picture"/>
    <Button
        android:id="@+id/select_photo_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/show_camera_btn"
        app:layout_constraintStart_toStartOf="@id/show_camera_btn"
        app:layout_constraintEnd_toEndOf="@id/show_camera_btn"
        android:text="@string/select_photo"/>
    <ImageView
        android:id="@+id/incident_image"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:contentDescription="@string/incident_captured_image"
        app:layout_constraintTop_toBottomOf="@id/select_photo_btn"
        app:layout_constraintStart_toStartOf="@id/select_photo_btn"
        app:layout_constraintEnd_toEndOf="parent"/>
    <Button
        android:id="@+id/save_incident_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="Save new incident"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="64dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>

